# ph-switch-mb

./: .gitignore  ENVIRONMENT.md  README.md  pyproject.toml
.github/workflows/: run_tests.yml
src/ph_switch_mb/: __main__.py  app.py  calculator.py  evaluator.py
src/ph_switch_mb/resources/: ph_switch_mb.icns
tests/: test_calculator.py  test_evaluator.py
